@@ -117,6 +117,7 @@ TAO_SCIOP_Transport::send_request (TAO_Stub *stub,
 
   if (this->send_message (stream,
                           stub,
+                          0,
                           message_semantics,
                           max_wait_time) == -1)
     return -1;
@@ -129,12 +130,15 @@ TAO_SCIOP_Transport::send_request (TAO_Stub *stub,
 int
 TAO_SCIOP_Transport::send_message (TAO_OutputCDR &stream,
                                    TAO_Stub *stub,
+                                   TAO_ServerRequest *request,
                                    TAO_Message_Semantics message_semantics,
                                    ACE_Time_Value *max_wait_time)
 {
   // Format the message in the stream first
-  if (this->messaging_object ()->format_message (stream, stub) != 0)
-    return -1;
+  if (this->messaging_object ()->format_message (stream, stub, request) != 0)
+    {
+      return -1;
+    }
 
   // This guarantees to send all data (bytes) or return an error.
   ssize_t n = this->send_message_shared (stub,
